<resources>
    <string name="app_name">book</string>
    <string name="friends">Друзья</string>
    <string name="home">Главная</string>
    <string name="profile">Профиль</string>
    <string name="title">title</string>
    <string name="genre">Жанр</string>
    <string name="tag">tag</string>
    <string name="description">Описание</string>
    <string name="biography">Биография</string>
    <string name="more_details">Подробее</string>
    <string name="tags">Тeги</string>
    <string name="reviews">Рецензии</string>
    <string name="view_all">Посмотреть все</string>
    <string name="user">user</string>
    <string name="temp_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce felis nulla, malesuada a mollis et, placerat vel velit. Aenean velit orci, varius nec faucibus lobortis, vehicula eu mauris. Phasellus non risus luctus, congue ligula sed, blandit tortor. Aenean pellentesque ante ullamcorper risus congue, et lobortis leo malesuada. Quisque aliquam enim at tellus ullamcorper tempus. Mauris a tincidunt risus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur mollis nibh ut mi tempus pellentesque. Maecenas eget luctus lorem. Maecenas vehicula sed dui quis placerat. Etiam laoreet, purus non cursus dapibus, turpis nisi accumsan dui, non tincidunt purus elit ac justo. Aliquam at tempus augue. Cras interdum malesuada congue. </string>
    <string name="friends_ratings">Оценки друзей</string>
    <string name="rating">Oценка</string>
    <string name="average">Средняя</string>
    <string name="author">Автор</string>
    <string name="estimate">Оценить</string>
    <string name="will_read">Буду читать</string>
    <string name="year">Год</string>
    <string name="ten_global_rating">10.0</string>
    <string name="ten_rating">10</string>
    <string name="review">Рецензия</string>
    <string name="date">date</string>
    <string name="search">Поиск:</string>
    <string name="find">Искать</string>
    <string name="name">name</string>
    <string name="nastia">Настя</string>
    <string name="not_found">Ничего не найдено</string>
    <string name="books">Книги</string>
    <string name="add_friends_in_friendBook">Добавьте друга в FriendBook</string>
    <string name="enter_name_of_friend">ВВЕДИТЕ ИМЯ ПОЛЬЗОВАТЕЛЯ</string>
    <string name="add_friends_description">Для отправки запроса вам понадобится имя интересующего вас пользователя. Обратите внимание, что имя пользователя чувствительно к регистру.</string>
    <string name="inastianice" formatted="false">#inastianice</string>
    <string name="send_friend_request">Отправить запрос для дружбы</string>
    <string name="your_name">Ваше имя пользователя -</string>

    <string name="no_rating">- - -</string>
    <string name="all_reviews">Все, %1$s</string>

    <string name="requests">Заявки</string>
    <string name="incoming">Входящие(5)</string>
    <string name="sent">Отправленные(10)</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отклонить</string>
    <string name="filters">Фильтры</string>
    <string name="hide_read">Скрыть уже прочитанное</string>
    <string name="rating2">Рейтинг</string>
    <string name="by_rating">По рейтингу</string>
    <string name="by_popular">По популярности</string>
    <string name="sort">Сортировать</string>
    <string name="continue_text">Продолжить</string>
    <string name="welcome_description">Оценивай книги и делись\nсвоими мыслями с\nдрузьями</string>
    <string name="welcome">Добро\nпожаловать\nв FriendBook</string>
    <string name="blue_circle">Blue Circle</string>
    <string name="entrance">Вход</string>
    <string name="email">Email</string>
    <string name="enter_email">Введите email</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="sign_in">ВОЙТИ</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="register_no_caps">Зарегистрироваться</string>
    <string name="skip">Пропустить</string>
    <string name="registration">Регистрация</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="next">Далее</string>
    <string name="have_an_account">Есть аккаунт?</string>
    <string name="sign_in_no_caps">Войти</string>
    <string name="name_user">Имя</string>
    <string name="enter_your_name">Введите ваше имя</string>
    <string name="nickname">Никнейм</string>
    <string name="сome_up_nickname">Придумайте никнейм</string>
    <string name="enter_code">Введите код, который Вам\n пришел на почту</string>
    <string name="search_title">Название книги, автор</string>
    <string name="photo">Фото</string>
    <string name="settings">Настройки</string>
    <string name="num_friends">друзей</string>
    <string name="edit_profile">Редактировать\nпрофиль</string>
    <string name="books_read">книг прочитано</string>
    <string name="reviews_read">рецензий</string>
    <string name="want_read">хочу почитать</string>
    <string name="add_friend">Добавить\nв друзья</string>
    <string name="friends_with_holder">Друзья</string>
    <string name="name_nickname">Имя, никнейм</string>
    <string name="books_read_2_lines">книг\nпрочитано</string>
    <string name="want_read_2_lines">хочу\nпрочитать</string>
    <string name="password_recovery">Восстановление пароля</string>
    <string name="password_recovery_instruction">Для восстановления доступа на ваш Email будет выслан код для подтверждения.</string>
    <string name="password_recovery_instruction_code">Проверьте почту.\n\n Введите код для подверждения.</string>
    <string name="code">Код</string>
    <string name="enter_code_hint">Введите код</string>
    <string name="send_code_again">Отправить код повторно</string>
    <string name="enter_new_password">Введите новый пароль.</string>
    <string name="confirm">Подтвердить</string>
    <string name="review_book">Оцените книгу</string>
    <string name="write_your_review_here">Напишите свой отзыв здесь!</string>
    <string name="make_review">Оценить</string>
    <string name="save">Сохранить</string>
    <string name="congratulations">Поздравляем!</string>
    <string name="congratulation_description">Вы успешно зарегистрированы. Вы будете перенаправлены на главную страницу через несколько секунд.</string>
    <string name="remove_friend">Удалить друга</string>
    <string name="toast_error_text">Ошибка. Попробуйте позже.</string>
    <string name="large_number_of_friends_requests">9+</string>
    <string name="all">Все</string>
    <string name="popular">Популярные</string>
    <string name="update">Обновить</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="categories">Категории</string>
    <string name="recommendations">Рекомендации для Вас</string>
    <string name="best_authors">Лучшие авторы</string>
    <string name="category">category</string>
    <string name="cancel_search">Отмена</string>
    <string name="genre_tag">Жанр, тег</string>
    <string name="search_type_title">Искать</string>
    <string name="search_authors">Авторов</string>
    <string name="search_books">Книги</string>
    <string name="all_tags">Все теги</string>
    <string name="reset">Сбросить</string>
    <string name="genres">Жанры</string>
    <string name="enter_name">Введите название</string>
    <string name="empty_friends_list">Добавьте человека в друзья, чтобы этот раздел не пустовал</string>
    <string name="authors">Авторы</string>
</resources>