<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.book.review_item.ReviewFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/space_5x" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_5x" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_5x" />

    <ImageView
        android:id="@+id/iv_prev"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:src="@drawable/arrow"
        app:flow_horizontalBias="0.0"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/gl_top"
        app:tint="@color/color_accent"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/basic_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/review"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toTopOf="@id/gl_top" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="iv_prev, tv_title" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_user_photo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/space_3x"
        android:background="@color/negative_rating"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/barrier_title"
        app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView" />

    <TextView
        android:id="@+id/tv_user_name"
        style="@style/basic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/user"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_user_photo"
        app:layout_constraintStart_toEndOf="@id/iv_user_photo"
        app:layout_constraintTop_toTopOf="@id/iv_user_photo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_3x"
        android:background="@drawable/positive_rating_background"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintTop_toBottomOf="@id/barrier_title">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_1x"
            android:text="@string/ten_rating"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="18sp"
            app:autoSizeMinTextSize="14sp"
            app:autoSizeStepGranularity="1sp"
            app:flow_firstHorizontalBias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="@dimen/space_05x"
            android:layout_marginEnd="@dimen/space_1x"
            android:src="@drawable/star"
            app:layout_constraintBottom_toBottomOf="@id/tv_rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_rating"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_date"
        style="@style/basic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/date"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintTop_toBottomOf="@id/cl_rating" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_user_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="iv_user_photo, tv_date" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_3x"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/barrier_user_data"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_review"
                style="@style/basic_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/title"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/basic_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/space_5x"
                android:text="@string/temp_string"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_review" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>