<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/book_bottom_sheet_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/space_5x" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_9x" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_9x" />

    <ImageView
        android:id="@+id/iv_pull_button"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:src="@drawable/pull_button"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/gl_top"
        app:tint="@color/pull_button"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/iv_book"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/iv_pull_button"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_book_name"
        style="@style/basic_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_4x"
        android:layout_marginTop="@dimen/space_1x"
        android:layout_marginEnd="@dimen/space_4x"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/iv_book" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_book_author"
        style="@style/translucent_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_4x"
        android:layout_marginEnd="@dimen/space_4x"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/author"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tv_book_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_book_year"
        style="@style/translucent_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_4x"
        android:layout_marginEnd="@dimen/space_4x"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/year"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tv_book_author" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bookmark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4x"
        android:background="@drawable/book_dialog_item_background"
        android:paddingBottom="@dimen/space_2x"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tv_book_year">

        <ImageView
            android:id="@+id/iv_bookmark"
            android:layout_width="14dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/bookmark"
            app:layout_constraintBottom_toBottomOf="@id/tv_bookmark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_bookmark"
            app:tint="@color/color_accent"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_bookmark"
            style="@style/basic_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/will_read"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_bookmark"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/space_2x"
        android:paddingBottom="@dimen/space_2x"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/cl_bookmark">

        <ImageView
            android:id="@+id/iv_star"
            android:layout_width="14dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/star"
            app:layout_constraintBottom_toBottomOf="@id/tv_star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_star"
            app:tint="@color/color_accent"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_star"
            style="@style/basic_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/estimate"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_star"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>