<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_book"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_book"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:background="@color/white"
            android:scaleType="fitCenter"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/iv_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginEnd="@dimen/space_2x"
        android:adjustViewBounds="true"
        android:src="@drawable/bookmark"
        app:layout_constraintEnd_toStartOf="@id/user_rating"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/basic_color"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_2x"
        android:background="@drawable/positive_rating_background"
        app:layout_constraintEnd_toStartOf="@id/tv_global_rating"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_1x"
            android:text="@string/ten_rating"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:flow_firstHorizontalBias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="@dimen/space_05x"
            android:layout_marginEnd="@dimen/space_1x"
            android:adjustViewBounds="true"
            android:src="@drawable/star"
            app:layout_constraintBottom_toBottomOf="@id/tv_rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_rating"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_global_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ten_global_rating"
        android:textColor="@color/positive_rating"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cv_book" />

    <ImageView
        android:id="@+id/iv_more"
        android:layout_width="18dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/icon_nav_not_selected"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_book_name"
        style="@style/basic_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_3x"
        android:layout_marginEnd="@dimen/space_2x"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/temp_string"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/iv_bookmark"
        app:layout_constraintStart_toEndOf="@id/cv_book"
        app:layout_constraintTop_toTopOf="@id/cv_book" />

    <TextView
        android:id="@+id/tv_book_author"
        style="@style/basic_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_3x"
        android:layout_marginTop="@dimen/space_1x"
        android:layout_marginEnd="@dimen/space_2x"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/temp_string"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/iv_bookmark"
        app:layout_constraintStart_toEndOf="@id/cv_book"
        app:layout_constraintTop_toBottomOf="@id/tv_book_name" />

    <TextView
        android:id="@+id/tv_book_year_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_3x"
        android:layout_marginTop="@dimen/space_1x"
        android:layout_marginEnd="@dimen/space_2x"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/temp_string"
        android:textColor="@color/light_color_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/iv_bookmark"
        app:layout_constraintStart_toEndOf="@id/cv_book"
        app:layout_constraintTop_toBottomOf="@id/tv_book_author" />
</androidx.constraintlayout.widget.ConstraintLayout>